--- a/stats/stats-server/src/main/resources/application.yml
+++ b/stats/stats-server/src/main/resources/application.yml
@@ -3,14 +3,14 @@ server:
 
 spring:
   datasource:
-    url: jdbc:postgresql://stats-db:5433/stats
+    url: jdbc:postgresql://stats-db:5432/stats
     username: stats_user
     password: stats_password
     driver-class-name: org.postgresql.Driver
 
   jpa:
     hibernate:
-      ddl-auto: none
+      ddl-auto: create-drop
     show-sql: true
     properties:
       hibernate:
